# lezac

./: .gitattributes  .gitignore  AGENTS.md  BOMOMIMK.SPR  BOMPAL.PAL  CARO.CAR  CMakeLists.txt  ENGLISH.DOC  FONTS.SPR  GRAN.MST  ITALIANO.DOC  LIVELS.SCH  PROEFS.SON  PROVA.SPR  README_RECONSTRUCTION.md  RECOVERY_STATUS.md  SFONLEF.ZBG
.github/workflows/: apply-core-progress-split.yml  audit-source-paths.yml  ci.yml  diagnose-source-split-2.yml  diagnose-source-split.yml  diagnose-ui-xdotool.yml  fix-ui-xdotool-driver.yml  migrate-source-inspection-paths.yml  release.yml  source-snapshot.yml
.split-diagnostics/: ctest-output-residual.txt  ctest-output.txt  failure-summary.txt  path-references.txt  source-path-references.txt  status.txt  ui-xdotool-output.txt
docs/: GHIDRA_NOTES.md
docs/architecture/: source-aware-tooling.md  source-file-map.md  source-modularization.md
docs/recovery/: autoplayer_harness_2026-04-23.md  boss_head_brain_spec.md  dosbox_explosion_capture_attempt_2026-04-21.md  dosbox_explosion_process_memory_attempt_2026-04-24.md  frame_comparison.md  gameplay_damage_collision_hud_2026-04-24.md  high_debris_lane_branch_model_2026-04-25.md  level1_passable_objects_2026-04-23.md  level_intro_exact_recovery_2026-07-19.md  original_evidence_blocked_windows_2026-05-23.md  original_level_transition_seed_2026-07-19.md  original_runtime_fixture_notes.md  port_completion_status.md  ready_fixture_provenance_contract.md  runtime_evidence_ledger.md  sound_launch_pad_process_memory_2026-07-16.md  sound_state6_process_memory_attempt_2026-07-16.md  sound_weapon_switch_process_memory_2026-07-16.md  visual_claim_promotions.md
docs/recovery/subagents/: 2026-04-20-autonomous-recovery.md  2026-04-20-end-flow.md  2026-04-20-sound-cursor.md  2026-04-20-sound-latch.md  2026-04-21-bomb-object-sound.md  2026-04-21-damage-counters-frame-inspection.md  2026-04-21-dosbox-explosion-capture.md  2026-04-21-explosion-debug-coverage.md  2026-04-21-player-damage-sound.md  2026-04-21-proefs-son-field-diagnostics.md  2026-04-21-state2-animation-advance.md  2026-04-21-state2-animation-effect.md  2026-04-21-state2-original-runtime-fixture.md  2026-04-21-state2-reentry.md  2026-04-21-state2-return-active.md  2026-04-21-state2-runtime-frame-oracle-hardening.md  2026-04-21-state2-runtime-frame-oracle.md  2026-04-21-trigger-sound.md  2026-04-22-collision-clearance-coverage.md  2026-04-22-explosion-runtime-capture.md  2026-04-22-gran-spawner-fixtures.md  2026-04-22-monster-motion-coverage.md  2026-04-22-sprite-blit-contract.md  2026-04-22-sprite-raw-roundtrip.md
src/: BOMOMIMK.SPR.json  BOMPAL.PAL.json  CARO.CAR.json  FONTS.SPR.json  GRAN.MST.json  LIVELS.SCH.json  PROEFS.SON.json  PROVA.SPR.json  RECS.DAT.json  SFONLEF.ZBG.json  main.cpp
src/app/: app.cpp
src/core/: progress.cpp  progress.hpp
src/modules/: README.md
tests/core/: progress_test.cpp
tests/fixtures/: boss_runtime_original_level7.txt  boss_runtime_original_level7_trace.txt  ds79b9_fallback_original_gameover.txt  route_timing_original_level1.txt
tests/fixtures/dosbox/: actor_update_runtime_oracle_bad_actor_slot.txt  actor_update_runtime_oracle_bad_segment.txt  actor_update_runtime_oracle_dispatch_gates_synthetic.txt  actor_update_runtime_oracle_missing_contact_scan.txt  actor_update_runtime_oracle_synthetic.txt  behavior4_runtime_oracle_bad_behavior.txt  behavior4_runtime_oracle_bad_segment.txt  behavior4_runtime_oracle_missing_actor_after.txt  behavior4_runtime_oracle_synthetic.txt  contact_scanner_runtime_oracle_bad_segment.txt  contact_scanner_runtime_oracle_bad_subject_flags.txt  contact_scanner_runtime_oracle_missing_contact_scan.txt  contact_scanner_runtime_oracle_missing_dimensions.txt  contact_scanner_runtime_oracle_synthetic.txt  explosion_playback_oracle_bad_segment.txt  explosion_playback_oracle_bp4_local_without_word_gate.txt  explosion_playback_oracle_count_selected.txt  explosion_playback_oracle_freeze_missing_break.txt  explosion_playback_oracle_freeze_without_instrumented_flag.txt  explosion_playback_oracle_freeze_without_runtime_patch.txt  explosion_playback_oracle_lane_div_scratch_synthetic.txt  explosion_playback_oracle_lane_div_without_divide_freeze.txt  explosion_playback_oracle_lane_result_bad_expected_old_bytes.txt  explosion_playback_oracle_lane_result_bad_far_pointer.txt  (+56 more)
tools/: capture_cpp_frames.sh  capture_original_actor_contact_procmem.sh  capture_original_actor_update_debug.sh  capture_original_behavior4_debug.sh  capture_original_behavior4_procmem.sh  capture_original_contact_scanner_debug.sh  capture_original_dosbox_frames.sh  capture_original_explosion_procmem.py  capture_original_lane_result_runtime.py  capture_original_lane_write_runtime.py  capture_original_sound_callsite_debug.sh  capture_original_sound_callsite_procmem.sh  capture_original_state2_visual_frames.sh  capture_original_visual_table_debug.sh  check_actor_contact_callsite_context.py  check_actor_contact_callsite_scan.py  check_actor_contact_evidence_map.py  check_actor_contact_procmem_helper.py  check_actor_contact_route_sweep.py  check_actor_dispatch_gate_sweep.py  check_actor_dispatch_gate_sweep_summary.py  check_actor_dispatch_ready_manifest.py  check_actor_dispatch_ready_pipeline.py  check_actor_dispatch_ready_results.py  check_actor_update_debug_capture_helper.py  check_actor_update_dispatch_gates.py  check_actor_update_runtime_oracle_fixtures.py  check_behavior4_debug_capture_helper.py  check_behavior4_procmem_helper.py  check_behavior4_procmem_route_sweep.py  check_behavior4_procmem_route_sweep_summary.py  check_behavior4_runtime_oracle_fixtures.py  check_branch_anchor_route_sweep.py  check_branch_anchor_route_sweep_summary.py  check_contact_scanner_debug_capture_helper.py  check_contact_scanner_runtime_oracle_fixtures.py  check_debug_capture_batch_summary.py  check_debug_capture_ready_manifest.py  check_debug_capture_ready_pipeline.py  check_debug_capture_ready_results.py  (+95 more)
tools/ghidra/: DumpGranPlacement.java  DumpLevelIntro.java  DumpLevelTransition.java  DumpPlaybackRanges.java  ExportLezacAnalysis.java
(+1 files in other folders)
